test/ui/src/compile_fail/std/emit_empty.stderr
error: missing template string literal
 --> src/compile_fail/std/emit_empty.rs:2:5
  |
2 |     emit::emit!();
  |     ^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `emit::emit` (in Nightly builds, run with -Z macro-backtrace for more info)
